--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && cd build && rm -f static/css/*.map; rm -f static/js/*.map; now --name firebase-retrospective --public"
   }
 }
